--- a/experiment_paper/experiments/flow_alpha/flow_alpha_effectiveness_table_m2_ibfs2.tex
+++ b/experiment_paper/experiments/flow_alpha/flow_alpha_effectiveness_table_m2_ibfs2.tex
@@ -1,7 +1,7 @@
-$1$ & -6.06 & -5.52 & 0.24 \\ 
-$2$ & -3.15 & -2.06 & 0.73 \\ 
-$4$ & -1.89 & -0.19 & 1.20 \\ 
-$8$ & -0.87 & 0.96 & 1.68 \\ 
-$16$ & -0.29 & 1.66 & 2.16 \\ 
-\cmidrule{1-4}% 
-Ref. &  \multicolumn{1}{|c|}{\FlowVariant{-}{-}{+}} & 6377.15 &  \\ 
+$1$ & -6.06 & -5.52 & 0.23 & 0.24 \\ 
+$2$ & -3.15 & -2.06 & 0.55 & 0.73 \\ 
+$4$ & -1.89 & -0.19 & 0.86 & 1.20 \\ 
+$8$ & -0.87 & 0.96 & 1.20 & 1.69 \\ 
+$16$ & -0.29 & 1.66 & 1.52 & 2.17 \\ 
+\cmidrule{1-5}% 
+Ref. &  \multicolumn{1}{c}{\FlowVariant{-}{-}{+}} & 6377.15 &  &  \\ 
