--- a/experiment_paper/experiments/flow_alpha/flow_alpha_table_m2_ibfs2.tex
+++ b/experiment_paper/experiments/flow_alpha/flow_alpha_table_m2_ibfs2.tex
@@ -1,7 +1,7 @@
-$1$ & -6.09 & 12.91 & -5.60 & 13.40 & 0.23 & 15.16 & 0.53 & 55.75 \\ 
-$2$ & -3.19 & 15.75 & -2.07 & 16.74 & 0.73 & 17.51 & 1.09 & 87.93 \\ 
-$4$ & -1.82 & 20.37 & -0.19 & 21.88 & 1.21 & 21.53 & 1.61 & 144.42 \\ 
-$8$ & -0.85 & 28.49 & 0.98 & 30.67 & 1.71 & 28.68 & 2.16 & 257.41 \\ 
-$16$ & -0.19 & 43.32 & 1.75 & 46.66 & 2.21 & 41.31 & 2.69 & 498.29 \\ 
-\cmidrule{1-9}% 
-Ref. & \multicolumn{2}{c||}{\FlowVariant{-}{-}{+}} & 6373.88 & 13.73 & \multicolumn{2}{c||}{} & \multicolumn{2}{c|}{} \\ 
+$1$ & -6.09 & 12.91 & -5.60 & 13.40 & 0.25 & 15.03 & 0.23 & 15.16 & 0.54 & 67.90 \\ 
+$2$ & -3.19 & 15.75 & -2.07 & 16.74 & 0.59 & 16.98 & 0.73 & 17.51 & 1.11 & 140.24 \\ 
+$4$ & -1.82 & 20.37 & -0.19 & 21.88 & 0.90 & 20.43 & 1.21 & 21.53 & 1.66 & 269.63 \\ 
+$8$ & -0.85 & 28.49 & 0.98 & 30.67 & 1.24 & 26.51 & 1.71 & 28.68 & 2.20 & 512.12 \\ 
+$16$ & -0.19 & 43.32 & 1.75 & 46.66 & 1.60 & 37.51 & 2.21 & 41.31 & 2.76 & 973.91 \\ 
+\cmidrule{1-11}% 
+Ref. & \multicolumn{2}{c}{\FlowVariant{-}{-}{+}} & 6373.88 & 13.73 & \multicolumn{6}{c}{} \\ 
