add epsilon experiments

--- a/experiment_paper/experiments/final_flow/final_flow_min_km1_per_instance_m2_ibfs.tex
+++ b/experiment_paper/experiments/final_flow/final_flow_min_km1_per_instance_m2_ibfs.tex
@@ -1,6 +1,6 @@
-\KaHyPar{MF} & 7542.88 & 16828.15 & 5511.40 & 15236.13 & 15197.60 & 2927.42 & 6010.05\\ 
-\KaHyPar{CA} & 2.27 & 2.88 & 1.96 & 1.88 & 2.52 & 3.45 & 1.78\\ 
-\hMetis{R} & 16.82 & 4.99 & 2.84 & 4.04 & 4.35 & 45.36 & 19.58\\ 
-\hMetis{K} & 14.83 & 8.42 & 2.22 & 5.02 & 7.42 & 27.40 & 19.37\\ 
-\PaToH{Q} & 12.97 & 17.97 & 10.53 & 16.76 & 17.62 & 12.92 & 9.13\\ 
-\PaToH{D} & 13.72 & 18.44 & 12.24 & 14.25 & 17.89 & 15.79 & 10.44\\ 
+\KaHyPar{MF} & 7542.88 & 16828.15 & 5511.40 & 15236.13 & 15197.60 & 2927.42 & 6010.05 & 7478.06\\ 
+\KaHyPar{CA} & 2.22 & 2.80 & 1.92 & 1.85 & 2.46 & 3.33 & 1.74 & 3.91\\ 
+\hMetis{R} & 14.40 & 4.75 & 2.76 & 3.88 & 4.17 & 31.20 & 16.37 & 41.92\\ 
+\hMetis{K} & 12.92 & 7.77 & 2.17 & 4.78 & 6.91 & 21.51 & 16.23 & 40.45\\ 
+\PaToH{Q} & 11.48 & 15.24 & 9.53 & 14.36 & 14.98 & 11.44 & 8.36 & 18.45\\ 
+\PaToH{D} & 12.06 & 15.57 & 10.90 & 12.47 & 15.17 & 13.64 & 9.45 & 23.04\\ 
