--- a/experiment_paper/experiments/final_flow/final_flow_km1_per_instance_m2_ibfs.tex
+++ b/experiment_paper/experiments/final_flow/final_flow_km1_per_instance_m2_ibfs.tex
@@ -1,6 +1,6 @@
-\KaHyPar{MF} & 7782.51 & 17476.91 & 5643.99 & 15863.75 & 15770.06 & 3038.55 & 6143.73\\ 
-\KaHyPar{CA} & 2.51 & 3.13 & 2.21 & 2.08 & 2.74 & 3.51 & 2.11\\ 
-\hMetis{R} & 15.75 & 3.66 & 1.63 & 2.07 & 2.79 & 43.42 & 19.65\\ 
-\hMetis{K} & 15.25 & 8.48 & 1.39 & 4.05 & 9.28 & 28.64 & 19.52\\ 
-\PaToH{Q} & 9.49 & 13.59 & 7.93 & 12.14 & 13.35 & 8.79 & 6.75\\ 
-\PaToH{D} & 16.75 & 23.78 & 15.09 & 18.27 & 21.54 & 18.30 & 12.90\\ 
+\KaHyPar{MF} & 7782.51 & 17476.91 & 5643.99 & 15863.75 & 15770.06 & 3038.55 & 6143.73 & 7783.87\\ 
+\KaHyPar{CA} & 2.44 & 3.04 & 2.16 & 2.03 & 2.66 & 3.39 & 2.07 & 3.84\\ 
+\hMetis{R} & 13.61 & 3.53 & 1.60 & 2.03 & 2.72 & 30.28 & 16.42 & 41.32\\ 
+\hMetis{K} & 13.23 & 7.82 & 1.37 & 3.89 & 8.49 & 22.26 & 16.33 & 40.14\\ 
+\PaToH{Q} & 8.67 & 11.97 & 7.35 & 10.83 & 11.78 & 8.08 & 6.33 & 15.12\\ 
+\PaToH{D} & 14.35 & 19.21 & 13.11 & 15.45 & 17.72 & 15.47 & 11.43 & 24.18\\ 
